Solucionado el atacheme

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,7 +41,7 @@ a {
 	border-bottom: solid 1px #c5c5c5;
 }
 .light {
-	background: #00000099;
+	background-color: #00000099;
 }
 .dark {
 	background: #0000009c;
