--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -9,6 +9,12 @@
 	.desktop {
 		display: block;
 	}
+	.social-networks-container {
+		margin-bottom: 4%;
+	}
+	.us-section-p {
+	font-size: 2rem;
+	}
 }
 
 
@@ -16,5 +22,11 @@
 @media (max-width: 720px) {
 	.mobile {
 		display: block;
+	}
+	.social-networks-container {
+	margin-bottom: 8%;
+	}
+	.us-section-p {
+	font-size: 1.5rem;
 	}
 }
