--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@
 
 body {
 	margin: 0;
-	
+
 	text-align: center;
 	font-family: roboto-light;
 	color: #fff;
@@ -118,18 +118,27 @@ header {
 
 /* Menu Mobile Styles  */
 
-.menuModal {
-    position: fixed;
-    display: none;
-    width: 50%;
-    height: 100vh;
-    top: 0;
-    right: 0;
-    padding-right: 40px;
-    padding-left: 40px;
-    box-sizing: border-box;
-    z-index: 30;
+.menuModal-section {
+	display: none;
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	z-index: 20;
 
+	cursor: pointer;
+	background: #0000009e;
+}
+.menuModal {
+  position: fixed;
+  width: 50%;
+  height: 100vh;
+  top: 0;
+  right: 0;
+  padding-right: 40px;
+  padding-left: 40px;
+  box-sizing: border-box;
+  z-index: 30;
+	
 	background: #000000eb;
 	border-left: solid 1px #fff;
 }
@@ -264,7 +273,7 @@ header {
 .home-section-button button {
 	width: 50%;
     height: 7vh;
-    
+
     font-family: roboto-light;
     font-size: 1.3rem;
     cursor: pointer;
@@ -447,7 +456,7 @@ a.fa.scroll-up {
     right: 50px;
     box-sizing: border-box;
     z-index: 20;
-    
+
     font-size: 24px !important;
     line-height: 37px !important;
     text-align: center;
